--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
-title: My Resume
-url: 'http://webjeda.com'
+title: Patrick McAndrew's CV
+url: 'http://dev.so-sure.net:40080'
 baseurl: '/online-cv' #change it according to your repository name
 
 
@@ -13,16 +13,14 @@ baseurl: '/online-cv' #change it according to your repository name
 
 
 #Profile information
-name: Alan Doe
-tagline: Full Stack Developer
-pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+name: Patrick McAndrew
+tagline: Seeking CTO Role for Funded Startup
 
 #sidebar links
-email: hello@webjeda.com
-phone: 012 345 6789
-website: blog.webjeda.com #do not add http://
-linkedin: alandoe
-github: sharu725
-twitter: '@webjeda'
+email: c@urgsystems.com
+website: urg.name #do not add http://
+linkedin: urg98
+github: urg
+twitter: '@urg98'
 
 #Update all the sections by editing the files inside _includes folder.
