--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 title: Patrick McAndrew's CV
-url: 'http://dev.so-sure.net:40080'
-baseurl: '/online-cv' #change it according to your repository name
+url: 'https://urg.github.io'
+baseurl: '/' #change it according to your repository name
 
 
 # Enable one of these styles by removing #. Style will be applied only after restarting the build or serve.
